# kelcoro

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build_and_test.yaml  building.yml  clang_new_version.yaml
headers/: async_task.hpp  channel.hpp  common.hpp  events.hpp  generator.hpp  job.hpp  logical_thread.hpp  task.hpp
include/: async_task.hpp  channel.hpp  common.hpp  events.hpp  generator.hpp  inplace_generator.hpp  job.hpp  kel_coro.ixx  kel_event_pool.ixx  kel_string_literal.ixx  kel_traits.ixx  kel_utility.hpp  kelcoro.hpp  latch.hpp  logical_thread.hpp  nonowner_lockfree_stack.hpp  operation_hash.hpp  task.hpp  thread_pool.hpp
include/kelcoro/: algorithm.hpp  async_task.hpp  channel.hpp  common.hpp  executor_interface.hpp  gate.hpp  generator.hpp  inplace_generator.hpp  job.hpp  kelcoro.hpp  latch.hpp  logical_thread.hpp  memory_support.hpp  noexcept_task.hpp  nonowner_lockfree_stack.hpp  operation_hash.hpp  road.hpp  stack_memory_resource.hpp  task.hpp  thread_pool.hpp
include/kelcoro/noexport/: expected.hpp  fixed_array.hpp  generators_common.hpp  macro.hpp  thread_pool_monitoring.hpp
include/noexport/: generators_common.hpp  macro.hpp  thread_pool_monitoring.hpp
tests/: CMakeLists.txt  main.cpp  test_coroutines.cpp  test_gate.cpp  test_generator.cpp  test_kel_base.hpp  test_kel_coroutines.hpp  test_stack_resource.cpp  test_thread_pool.cpp  tests_generator.cpp
